--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+# Esta distribución es necesaria para probar con python 3.7
+dist: xenial
+language: python
 python:
   - "3.7"
 # Comando para instala dependencias
