--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install -r requirements.txt
 # Comando para correr las pruebas y medir cobertura 
 script:
-  - py.test --cov-report term --cov=geoambiental -v
+  - py.test --cov-report term --cov=distdens -v
 after_success:
   - codecov
