--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,16 @@
-name: Conservación de Islas
-on: [push, pull_request]
-
+name: Tests
+on:
+  pull_request:
+    branches:
+      - develop
+      - master
+  push:
+    branches:
+      - develop
+      - master
 jobs:
   actions:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: Copia repositorio
       uses: actions/checkout@v2
@@ -12,6 +19,6 @@ jobs:
     - name: Verifica el formato
       run: docker run islasgeci make check
     - name: Corre pruebas
-      run: docker run islasgeci make tests
+      run: docker run islasgeci make coverage
     - name: Evalua resistencia a mutaciones
       run: docker run islasgeci make mutants
